<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bgImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_haui"
            android:scaleType="centerCrop"
            android:alpha="0.6" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            tools:context=".ui.home.StudentHome">

            <!-- CARD 1 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_test"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="50dp"
                android:background="#FFFFFF"
                android:backgroundTint="#F8E2E2"
                app:cardCornerRadius="35dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toStartOf="@id/card_revise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/icon_test"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/card1"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imageView" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!-- CARD 2 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_revise"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="50dp"
                android:background="#C86464"
                android:backgroundTint="#F8E2E2"
                app:cardCornerRadius="35dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/card_test"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/icon_revise"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/card2"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imageView1" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!-- CARD 3 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_question"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="50dp"
                android:background="#C86464"
                android:backgroundTint="#F8E2E2"
                app:cardCornerRadius="35dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toStartOf="@id/card_create"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_test">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/icon_question"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/card3"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imageView2" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!-- CARD 4 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_create"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="50dp"
                android:background="#C86464"
                android:backgroundTint="#F8E2E2"
                app:cardCornerRadius="35dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_question"
                app:layout_constraintTop_toBottomOf="@id/card_revise">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/icon_create"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/card4"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imageView3" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!-- CARD 5 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_history"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="50dp"
                android:background="#C86464"
                android:backgroundTint="#F8E2E2"
                app:cardCornerRadius="35dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toStartOf="@id/card_result"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_question">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/icon_history"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/card5"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imageView4" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!-- CARD 6 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_result"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="50dp"
                android:background="#C86464"
                android:backgroundTint="#F8E2E2"
                app:cardCornerRadius="35dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_history"
                app:layout_constraintTop_toBottomOf="@id/card_create">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/icon_result"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/card6"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imageView5" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!-- CARD 7 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_note"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:background="#C86464"
                android:backgroundTint="#F8E2E2"
                app:cardCornerRadius="35dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/card_logout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_history">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/icon_note"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/card7"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imageView6" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!-- CARD 8 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_logout"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:background="#C86464"
                android:backgroundTint="#F8E2E2"
                app:cardCornerRadius="35dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_note"
                app:layout_constraintTop_toBottomOf="@id/card_result">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/icon_logout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/card8"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imageView7" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</ScrollView>